--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,11 @@ environment:
 
 dependencies:
   carousel_slider: ^5.0.0
+  shared_preferences: ^2.3.2
+  firebase_storage: ^12.3.3
   cloud_firestore: ^5.4.4
   firebase_core: ^3.6.0
-  firebase_storage: ^12.3.3
+  path: ^1.9.0
   flutter:
     sdk: flutter
 
